fix font align problem

--- a/react-app/src/components/Server/ServerDiscover/ServerDiscover.css
+++ b/react-app/src/components/Server/ServerDiscover/ServerDiscover.css
@@ -66,10 +66,12 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
     grid-auto-rows: 1fr;
-    /* grid-gap: 15px ; */
+    grid-gap: 5px ;
     max-width: 100%;
     /* padding: 25px 0px; */
     margin-bottom: 150px;
+    padding-left: 5px;
+    padding-right: 5px;
 
 
 }
@@ -82,8 +84,8 @@
     flex-direction: column;
     height: 380px;
     background-color: rgb(41, 43, 47);
-    margin-left: 5px;
-    margin-right: 5px;
+    /* margin-left: 5px; */
+    /* margin-right: 5px; */
     margin-top: 20px;
 
 
@@ -106,7 +108,7 @@
 
 .allserver-description {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     color: rgb(148, 150, 153);
     margin-top: 18px;
     margin-left: 10px;
